src/snapshots/openapi31to30__utoipa_tests__basic-converted.snap
---
source: src/utoipa_tests.rs
expression: "&converted"
---
openapi: 3.0.3
info:
  title: utoipa-axum
  description: Utoipa's axum bindings for seamless integration for the two
  contact:
    name: Juha Kukkonen
    email: juha7kukkonen@gmail.com
  license:
    name: MIT OR Apache-2.0
    identifier: MIT OR Apache-2.0
  version: 0.2.0
paths:
  /user:
    get:
      operationId: get_user
      responses:
        '200':
          description: ''
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/User'
components:
  schemas:
    User:
      type: object
      required:
      - id
      properties:
        id:
          type: integer
          format: int32
        number:
          type: integer
          format: int32
          description: nullable field with docs
          nullable: true
